@@ -1,6 +1,6 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-BEEP-Lite
-version:      0.03
+version:      0.04
 version_from: lib/Net/BEEP/Lite.pm
 installdirs:  site
 requires:
